Implement transform layer

--- a/db_create_raw_tbls.ipynb
+++ b/db_create_raw_tbls.ipynb
@@ -12,17 +12,20 @@
      },
      "inputWidgets": {},
      "nuid": "1d3295b8-9657-44c3-9dcf-ed98026a99ff",
-     "showTitle": false,
+     "showTitle": true,
      "tableResultSettingsMap": {},
-     "title": ""
+     "title": "Cell 1"
     }
    },
    "outputs": [],
    "source": [
     "%sql\n",
-    "use catalog `raw_data`;\n",
-    "use schema `corerep`;\n",
-    "/* Create Table Command */\n",
+    "use catalog `corerep`;\n",
+    "use schema `raw_data`;\n",
+    "\n",
+    "\n",
+    "/* Create Table Command \n",
+    "* Get fixed income info */\n",
     "create table if not exists raw_fixed_income\n",
     "using delta\n",
     "as\n",
@@ -49,7 +52,7 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "select *from raw_data.corerep.raw_fixed_income;"
+    "select *from corerep.raw_data.raw_fixed_income;"
    ]
   },
   {
@@ -85,7 +88,7 @@
     "df = df.toDF(*new_columns)\n",
     "\n",
     "# Write the DataFrame to the Unity Catalog table, overwriting if it exists\n",
-    "df.write.mode(\"overwrite\").saveAsTable(\"raw_data.corerep.raw_loan\")"
+    "df.write.mode(\"overwrite\").saveAsTable(\"corerep.raw_data.raw_loan\")"
    ]
   },
   {
@@ -115,7 +118,7 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "select * from raw_data.corerep.raw_loan;"
+    "select * from corerep.raw_data.raw_loan;"
    ]
   },
   {
@@ -138,8 +141,8 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "use catalog `raw_data`;\n",
-    "use schema `corerep`;\n",
+    "use catalog `corerep`;\n",
+    "use schema `raw_data`;\n",
     "select current_catalog(), current_schema();\n",
     "SHOW TABLES;"
    ]
@@ -165,7 +168,7 @@
    "source": [
     "%sql\n",
     "/* Describe Command */\n",
-    "DESCRIBE HISTORY raw_data.corerep.raw_loan;\n"
+    "DESCRIBE HISTORY corerep.raw_data.raw_loan;\n"
    ]
   },
   {
@@ -188,10 +191,10 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "CREATE TABLE IF NOT EXISTS raw_data.corerep.raw_country_risk\n",
+    "CREATE TABLE IF NOT EXISTS corerep.raw_data.raw_country_risk\n",
     "USING DELTA\n",
     "AS\n",
-    "SELECT * FROM read_files('/Volumes/raw_data/corerep/country_data',\n",
+    "SELECT * FROM read_files('/Volumes/corerep/raw_data/country_data',\n",
     "  format => 'csv',\n",
     "  header => true,\n",
     "  inferSchema => true\n",
@@ -218,7 +221,175 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "select * from raw_data.corerep.raw_country_risk;"
+    "select * from corerep.raw_data.raw_country_risk;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "fb96edd4-d1a8-4734-a4b1-622401edd2fa",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "describe detail corerep.raw_data.raw_loan;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "0b1e8a0f-6d76-4454-bd03-c3d352ca37f0",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "dbutils.fs.ls(\"/Volumes/corerep/raw_data/country_data/db_create_raw_tbls.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "8b551814-d763-4975-b674-fb1fd71146cc",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%fs ls \"dbfs:/Volumes/corerep/raw_data/country_data/db_create_raw_tbls.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "6c23731c-674c-4527-a96d-e16d471efa3f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "/* Create raw tables for general ledger */\n",
+    "\n",
+    "CREATE TABLE IF NOT EXISTS corerep.raw_data.raw_gl_balances\n",
+    "USING DELTA\n",
+    "AS\n",
+    "SELECT * FROM dataplatr_corp_oracle_financial_general_ledger_gl_analytics.marketplace.accounting_gl_balances;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "382ddde7-fe8d-464c-834b-d4dd3b652b70",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "select * from  corerep.raw_data.raw_gl_balances;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "bf39ee82-ba4a-4fa3-8677-6ab1d7582c2c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "describe table corerep.raw_data.raw_gl_balances"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "4d0b50d0-4604-4d7b-be5a-4f2787f6ec5d",
+     "showTitle": true,
+     "tableResultSettingsMap": {},
+     "title": "Cell 15"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "SELECT SUM(cnt)\n",
+    "FROM (\n",
+    "  SELECT COUNT(*) AS cnt\n",
+    "  FROM corerep.raw_data.raw_gl_balances\n",
+    "  GROUP BY GLBalanceKey\n",
+    "  HAVING COUNT(*) = 1\n",
+    ") sub;"
    ]
   }
  ],
@@ -240,7 +411,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 8955036159550351,
+     "commandId": 7989057435628255,
      "dataframes": [
       "_sqldf"
      ]
