Renaming & organizing the files

--- a/transform_layer/trf_corerep_core.ipynb
+++ b/transform_layer/trf_corerep_core.ipynb
@@ -165,7 +165,7 @@
     },
     "pythonIndentUnit": 4
    },
-   "notebookName": "calc_gen_ledger",
+   "notebookName": "trf_corerep_core",
    "widgets": {}
   },
   "language_info": {
