Edit folder structure and re-usable transformation

--- a/db_ops/create_catalog_schema.ipynb
+++ b/db_ops/create_catalog_schema.ipynb
@@ -47,6 +47,30 @@
     "CREATE SCHEMA IF NOT EXISTS raw_data.corerep\n",
     "COMMENT 'Finance-related curated datasets';\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "bdfe0bee-6a4e-43a0-ba5d-82a9dfaf86d2",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "CREATE SCHEMA IF NOT EXISTS corerep.reference_data\n",
+    "COMMENT 'Reference data for Finance';"
+   ]
   }
  ],
  "metadata": {
@@ -61,7 +85,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 8727887421373716,
+     "commandId": 6207197679087206,
      "dataframes": [
       "_sqldf"
      ]
